--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>portfolio</title>
+    <title>Salah | Full Stack Developer & Data Scientist</title>
+    <meta name="description" content="Portfolio of Aboobacker Salah, a Full Stack Developer and Data Scientist specializing in modern web apps and AI solutions." />
+    <meta name="keywords" content="Salah, Full Stack Developer, Data Scientist, React, Next.js, Portfolio" />
   </head>
   <body>
     <div id="root"></div>
